--- a/index.html
+++ b/index.html
@@ -9,71 +9,70 @@
 <body>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-  <div id="container">
-    <div id="logo">
-      <header id="header">
-        <img src="https://q4u8s3f6.stackpathcdn.com/pub/media/theme_options/default/logo_2.png" alt="" id="header-img">
-  
-        <nav id="nav-bar" class="nav-bar">
-          <ul>
-            <li><a class="nav-link" href="#home">Home</a></li>
-            <li><a class="nav-link" href="#video">Video</a></li>
-            <li><a class="nav-link" href="#about">About</a></li>
-          </ul>
-        </nav>
-      </header>
-    </div>
-    <section id="about" class="section">
-      <div id="title">About AlterEgo Fitness</div>
-      <p>Based in Manchester England and founded in 2015 with just four stringers, AlterEgo Fitness is now a registered limited company with over 100 individual products and thousands of loyal customers from around the world.
-  
-        Our goal is pretty simple, to provide affordable quality gym wear without the price tag. Our Mission is simple, to become one of the BIGGEST and influential brands in the world. Our trustpilot rating is over 9 stars and we will forever continue to provide an easy, affordable but sleek service without compromise.
-      </p>
-    </section>
-  
-    <div id="clip">
-      <iframe id="video" width="400" height="400" src="https://www.youtube.com/embed/q_muNcfPO88" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-  
-    <div id="products">
-      <div class="card">
-        <img src="jeans3.jpg" alt="Denim Jeans" style="width:100%">
-        <h1>SHIRTS</h1>
-        <p class="price">$19.99</p>
-        <p>Some text about the jeans..</p>
-        <p><button>Add to Cart</button></p>
-      </div>
-  
-      <div class="card">
-        <img src="jeans3.jpg" alt="Denim Jeans" style="width:100%">
-        <h1>HOODIES</h1>
-        <p class="price">$19.99</p>
-        <p>Some text about the jeans..</p>
-        <p><button>Add to Cart</button></p>
-      </div>
-  
-      <div class="card">
-        <img src="jeans3.jpg" alt="Denim Jeans" style="width:100%">
-        <h1>GEAR</h1>
-        <p class="price">$19.99</p>
-        <p>Some text about the jeans..</p>
-        <p><button>Add to Cart</button></p>
-      </div>
-  
-    </div>
-  
-    <section id="info">
-      <form id="form" action="https://www.freecodecamp.com/email-submit">
-        <p id="welcome">
-          <h3>SIGN UP</h3>
-        </p>
-        <input id="email" type="email" placeholder="Enter Your Email">
-        <input id="submit" type="submit" value="Get Started">
-      </form>
-    </section>
-  
+<div id="container">
+  <div id="logo">
+    <header id="header">
+      <img src="https://q4u8s3f6.stackpathcdn.com/pub/media/theme_options/default/logo_2.png" alt="" id="header-img">
+
+      <nav id="nav-bar" class="nav-bar">
+        <ul>
+          <li><a class="nav-link" href="#about">About</a></li>
+          <li><a class="nav-link" href="#products">Products</a></li>
+          <li><a class="nav-link" href="#subscribe">Subscribe</a></li>
+        </ul>
+      </nav>
+    </header>
   </div>
- 
+  <section id="about" class="section">
+    <div id="title">About AlterEgo Fitness</div>
+    <p>Based in Manchester England and founded in 2015 with just four stringers, AlterEgo Fitness is now a registered limited company with over 100 individual products and thousands of loyal customers from around the world.
+
+      Our goal is pretty simple, to provide affordable quality gym wear without the price tag. Our Mission is simple, to become one of the BIGGEST and influential brands in the world. Our trustpilot rating is over 9 stars and we will forever continue to provide an easy, affordable but sleek service without compromise.
+    </p>
+  </section>
+
+  <div id="clip">
+    <iframe id="video" width="400" height="400" src="https://www.youtube.com/embed/q_muNcfPO88" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+
+  <div id="products">
+    <div class="card">
+      <img src="https://s3-eu-west-1.amazonaws.com/tpd/logos/5ca88aad3053b90001c2ddfe/0x0.png" alt="Shirts" style="width:100%">
+      <h1>SHIRTS</h1>
+      <p class="price">$19.99</p>
+      <p>Some text about the jeans..</p>
+      <p><button>Add to Cart</button></p>
+    </div>
+
+    <div class="card">
+      <img src="https://s3-eu-west-1.amazonaws.com/tpd/logos/5ca88aad3053b90001c2ddfe/0x0.png" alt="Hoodies" style="width:100%">
+      <h1>HOODIES</h1>
+      <p class="price">$19.99</p>
+      <p>Some text about the jeans..</p>
+      <p><button>Add to Cart</button></p>
+    </div>
+
+    <div class="card">
+      <img src="https://s3-eu-west-1.amazonaws.com/tpd/logos/5ca88aad3053b90001c2ddfe/0x0.png" alt="Shirts" style="width:100%">
+      <h1>GEAR</h1>
+      <p class="price">$19.99</p>
+      <p>Some text about the jeans..</p>
+      <p><button>Add to Cart</button></p>
+    </div>
+
+  </div>
+
+  <section id="subscribe">
+    <form id="form" action="https://www.freecodecamp.com/email-submit">
+      <p id="welcome">
+        <h3>SIGN UP</h3>
+      </p>
+      <input id="email" type="email" placeholder="Enter Your Email">
+      <input id="submit" type="submit" value="Get Started">
+    </form>
+  </section>
+
+</div>
 
 </body>
 </html>
